# picocraft

./: Cargo.toml  README.md
.cargo/: config.toml
src/: events.rs  main.rs  net.rs  panic.rs  read.rs  write.rs
src/packets/: mod.rs  status.rs
