[package]
name = "picocraft"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-usb-logger = "0.2.0"
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-net = { version = "0.4.0", features = [
    #"defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "log",
] }
embassy-futures = "0.1.0"
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

critical-section = "1.1"

#panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = "0.8"

#embedded-storage = { version = "0.3" }
#embedded-sdmmc = "0.7.0"

static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.8.5", default-features = false }
embedded-io-async = "0.6.1"
rp2040 = "0.1.0"
rp2040-hal = "0.10.2"
embedded-alloc = "0.5.1"

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
